[gd_scene load_steps=11 format=2]

[ext_resource path="res://bot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://beam.png" type="Texture" id=3]
[ext_resource path="res://SFX/Drone.wav" type="AudioStream" id=4]
[ext_resource path="res://botbroke.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 15.5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "shotdown",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 25.02

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -11, 11 ), Vector2( 33.5714, 11.4286 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11, 11 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 55, -59 )
scale = Vector2( 3.3, 3.3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 5.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -11, 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( 0.92, 1 )
polygon = PoolVector2Array( 26, 12, 103.833, 84.5, 19.6667, 84.5 )

[node name="Beam" type="Sprite" parent="Area2D"]
position = Vector2( 62.1667, 47.8333 )
scale = Vector2( 0.0601852, 0.0617781 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10, 6 )
scale = Vector2( 0.11, 0.11 )
frames = SubResource( 3 )

[node name="Proximity" type="Area2D" parent="."]
position = Vector2( 8, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximity"]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 88.3333, 20 )
enabled = true
cast_to = Vector2( 0, 80 )
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="deathtimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true
bus = "SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
